# ibm-datascience-professional-certificate

./: .gitignore  README.md  pyproject.toml
data-analysis-with-python/: House_Sales_in_King_Count_USA.ipynb
tools-for-datascience/: DataScienceEcosystem.ipynb
