[project]
name = "ibm-datascience-professional-certificate"
version = "0.1.0"
description = "IBM Data Science Professional Certificate Assignments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "jupyterlab>=4.4.4",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "yfinance>=0.2.64",
]
